--- a/language/en.json
+++ b/language/en.json
@@ -309,6 +309,12 @@
     "sendInvitations"   : "Send invitations",
     "mailExample"       : "example@mail.com",
     "invitationSentTitle"    : "Invitations sent",
-    "invitationSentSubtitle" : "Your invitations are on their way!"
+    "invitationSentSubtitle" : "Your invitations are on their way!",
 
+    "deleteAccount" : {
+        "title" : "Delete account",
+        "files" : "I understand that I'll be loosing all my files and documents.",
+        "worlds" : "I understand that I'll be loosing all my worlds from Cosmos.",
+        "chats" : "I understand that I'll be loosing all my conversations in Chat."
+    }
 }
