--- a/language/es.json
+++ b/language/es.json
@@ -311,10 +311,11 @@
     "invitationSentSubtitle" : "Tus invitaciones están de camino!",
 
     "deleteAccount" : {
-        "title" : "Borrar cuenta",
-        "files" : "Entiendo que perderé todos mis archivos y documentos.",
-        "worlds" : "Entiendo que perderé todos mis mundos de Cosmos.",
-        "chats" : "Entiendo que perderé todas mis conversaciones de Chat."
+        "title"     : "Borrar cuenta",
+        "files"     : "Entiendo que perderé todos mis archivos y documentos.",
+        "worlds"    : "Entiendo que perderé todos mis mundos de Cosmos.",
+        "chats"     : "Entiendo que perderé todas mis conversaciones de Chat.",
+        "alertInfo" : "Su cuenta se ha deshabilitado y se borrará en 15 días. Si quiere cancelar el borrado, vuelva a iniciar sesión antes de esos 15 días."
     }
 
 }
