--- a/language/en.json
+++ b/language/en.json
@@ -321,6 +321,6 @@
 
     "createAccount" : {
         "title": "Demo accounts can't modify this information",
-        "body": "Make this account yours just by typing your email address inside the popup shown at the bottom right corner of your screen.",
+        "body": "Make this account yours just by typing your email address inside the popup shown at the bottom right corner of your screen."
     }
 }
