Supporting more languages

--- a/language/en.json
+++ b/language/en.json
@@ -161,8 +161,14 @@
   "yymmdd": "YY MM DD",
   "languageTitle": "LANGUAGE",
   "languageDescription": "Please select the language of your horbito",
-  "spanishLanguage": "Spanish",
   "englishLanguage": "English",
+  "spanishLanguage": "Spanish",
+  "frenchLanguage": "French",
+  "portugueseLanguage": "Portuguese",
+  "italianLanguage": "Italian",
+  "russianLanguage": "Russian",
+  "germanLanguage": "German",
+  "chineseLanguage": "Chinese",
   "extensionsTitle": "EXTENSIONS",
   "displayExtensions": "Display the extension at the end of the filenames",
   "customTitle": "CUSTOMIZE",
