--- a/language/es.json
+++ b/language/es.json
@@ -161,8 +161,14 @@
   "yymmdd": "AA MM DD",
   "languageTitle": "IDIOMA",
   "languageDescription": "Por favor selecciona el idioma de tu horbito",
-  "spanishLanguage": "Español",
   "englishLanguage": "Inglés",
+  "spanishLanguage": "Español",
+  "frenchLanguage": "Francés",
+  "portugueseLanguage": "Portugués",
+  "italianLanguage": "Italiano",
+  "russianLanguage": "Ruso",
+  "germanLanguage": "Alemán",
+  "chineseLanguage": "Chino",
   "extensionsTitle": "EXTENSIONES",
   "displayExtensions": "Mostrar la extensión al final de los nombres de ficheros",
   "customTitle": "PERSONALIZAR",
